--- a/src/week6/example4.html
+++ b/src/week6/example4.html
@@ -9,9 +9,8 @@
 <hr>
 <script>
     var number = prompt("숫자 입력", "");
-    var size = number.split("").length;
 
-    if (number.split("")[0] == number.split("")[number.split("").length - 1]) {
+    if (number.split("")[0] === number.split("")[number.split("").length - 1]) {
         document.write(number + ": 같음");
     } else {
         document.write(number + ": 다름");
